force-app/main/default/objects/Book_Review__c/Book_Review__c.object-meta.xml
<CustomObject>
    <description>Custom object for managing book reviews</description>
    <label>Book Review</label>
    <nameField>
        <label>Book Review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Book Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>