force-app/main/default/objects/Book_Review__c/fields/Author_Name__c.field-meta.xml
<CustomField>
    <fullName>Author_Name__c</fullName>
    <label>Author Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>