force-app/main/default/objects/Book_Review__c/fields/Book_Title__c.field-meta.xml
<CustomField>
    <fullName>Book_Title__c</fullName>
    <label>Book Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>