force-app/main/default/objects/Book_Review__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <label>Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Book rating on a scale of 1-5</description>
</CustomField>