force-app/main/default/objects/Book_Review__c/fields/Review_Notes__c.field-meta.xml
<CustomField>
    <fullName>Review_Notes__c</fullName>
    <label>Review Notes</label>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>