force-app/main/default/objects/Book_Review__c/fields/Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Review_Status__c</fullName>
    <defaultValue>"Draft"</defaultValue>
    <description>Picklist field to track the review status: Draft or Published</description>
    <label>Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Published</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>